darkmode seem to stop flickering

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-:root {
+.dark-mode {
   --white: white;
   --light-white: rgb(192, 192, 192);
   --dark-gray: #333;
